updated the glob

--- a/ui/src/themes/default/_chat-overrides.scss
+++ b/ui/src/themes/default/_chat-overrides.scss
@@ -34,7 +34,7 @@ $conversation-header-info-bg-color: $gray-100;
 $chat-container-message-input-bg-color: $gray-100;
 $message-input-content-editor-wrapper-bg-color: $gray-200;
 $message-input-content-editor-bg-color: $gray-200;
-$message-input-content-editor-color: $np-white;
+$message-input-content-editor-color: $np-black;
 
 $message-list-bg-color: $gray-200;
 
