changed chat color

--- a/ui/src/themes/default/_chat-overrides.scss
+++ b/ui/src/themes/default/_chat-overrides.scss
@@ -45,6 +45,6 @@ $button-color: $gray-400;
 
 
 $message-content-incoming-color: $np-white;
-$message-content-incoming-bg-color: $np-dark-bg;
+$message-content-incoming-bg-color: $gray-400;
 $message-content-outgoing-color: $np-white;
-$message-content-outgoing-bg-color: $np-dark-hl;
+$message-content-outgoing-bg-color: $np-black;
